--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         <div class="item" style="--position: 6"><img src="assets/stylestreet_page-0001.jpg" alt=""></div>
                         <div class="item" style="--position: 7"><img src="assets/Deef poster_page-0001.jpeg" alt=""></div>
                         <div class="item" style="--position: 8"><img src="assets/Projeto poster japones.jpg" alt=""></div>
-                        <div class="item" style="--position: 9"><img src="assets/moçapirulito.jpg" alt=""></div>
+                        <div class="item" style="--position: 9"><img src="assets/Projeto 2 renovado.png"alt=""></div>
                         <div class="item" style="--position: 10"><img src="assets/palacio itamaraty.jpeg" alt=""></div>
                     </div>
                 </section>
