--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                          class="icon"
                          />
                          <h3>Experiências</h3>
-                         <p>Mais de 2 Anos <br>Ilustração</p>
+                         <p>Mais de 3 anos<br>Freelancer</p>
                     </div>
                     <div class="details-container">
                         <img src="./assets/Education.png" alt="Education icon"
