--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                          class="icon"
                          />
                          <h3>Curso</h3>
-                         <p> Curso completo de Ilustração na EBAC  <br>Certificado</p>
+                         <p> Front-End – Curso Básico Design para Mídias Digitais  <br>Curso Inglês pela ILAC</p>
                   </div>
                 </div>
                 <div class="text-container">
